separated bytecode and jit, jmm and concurrency getting in shape