@@ -1,2 +1,17 @@
 + fix tests under Windows (wrong time format, don't use default
-+ ant maven tasks, include 
++ ant maven tasks, include
+-XX:-UseBiasedLocking -XX:-DoEscapeAnalysis
+
+int Method::fast_exception_handler_bci_for
+
+- add about new
+- add about stack and local size
+
+- explain vtable with pictures (invoke interface)
+- special vs virtual, ref type vs object type
+- zrobić javaagent na bytebuddy
+- wywalić jitescript (martwy)
+
+ -XX:CompileCommand=print,*NullCheckFolding.nullCheckFodling
+
+PrintAssembly + JMH, moar code with JMH
